ISPN-10144 Netty wants access to jdk.internal.misc.Unsafe